--- a/ProjetoAgricolaDario/estiloHome.css
+++ b/ProjetoAgricolaDario/estiloHome.css
@@ -8,6 +8,7 @@
     font-size: 62.5%;
     --nav--bg--color: #466428;
     --nav--text--color: white;
+    --bg--text--color: white;
 }
 
 .fotoLogo {
@@ -22,6 +23,7 @@
     color: var(--nav--text--color);
     display: flex;
     flex-direction: column;
+    
 
 }
 .nome {
@@ -42,9 +44,22 @@ ul a {
     margin: 5rem 0;
 }
 
-.background {
+.container {
+    display: flex;
+}
+
+.container2 {
+    display: flex;
+    padding: 1rem;
     background-color: black;
     opacity: 0.9;
+}
+
+.container3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20rem;
 }
 
 body {
@@ -53,4 +68,5 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+    color: var(--bg--text--color);
 }
