--- a/ProjetoAgricolaDario/estiloTrabalheConosco.css
+++ b/ProjetoAgricolaDario/estiloTrabalheConosco.css
@@ -4,110 +4,133 @@
     box-sizing: border-box;
 }
 
-:root{
+:root {
     font-size: 62.5%;
     --nav--bg--color: #466428;
     --nav--text--color: white;
-    --body--bg--color: white;
-    --body--text--color: black;
-}
-
-body {
-    font-size: 1.8rem;
-    background-color: var(--body--bg--color);
 }
 
 .fotoLogo {
-    width: 10rem;
-    height: 10rem;
+    width: 20rem;
+    height: 20rem;
 }
 
-nav {
-
-    background-color: var(--nav--bg--color);
-    color: var(--nav--bg--color);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0 2.4rem;
-    font-size: 2rem;
-    height: 10rem;
-
+html{
+    min-height: 100%;
+    background-image: url(maquinas.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    
 }
-.nome {
+
+.marca{
     font-size: 5rem;
     text-align: center;
 }
 
-ul {
-    display: flex;
-    list-style: none;
-    gap: 13rem;
-}
+ul{
+    list-style-type: none;
+    font-size: 3rem;
+ }
 
 ul a {
     text-decoration: none;
     color: var(--nav--text--color);
+    display: block;
+    text-align: center;
+    margin: 5rem 0;
 }
 
-.container {
-
+.menu{
+    width: 21rem;
+    height: 75rem;
+    background-color: var(--nav--bg--color);
+    color: var(--nav--text--color);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    opacity: 0.9;
     
 }
 
-form {
+.conteudo{
+    display: flex;
+}
+
+.conteiner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:white
+
+}
+
+form{
+    display: flex;
+    flex-direction: column;
     width: 60rem;
     margin-left: 7rem;
     margin-bottom: 7rem;
     padding: 20px;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 15px;
+    font-size: 3rem;
+    background: rgba(0, 0, 0, 0.6 );
+    gap: 0.5rem;
 }
 
-label {
-    display: block;
-    margin-bottom: 2px;
-}
-
-input {
-    width: 100%;
-    padding: 2px
-}
-
-.botoes{
-
-    margin-top: 10px;
-    display:flex;
-    align-items: center;
-    gap: 3rem;
-
-}
-
-#Enviar{
-
-    color: #33B300;
-    width: 143px;
-    height: 30px;
-    background-color: white;
-    border-radius: 10px;  
-    
-}
-
-input[type=file]{
+input[type="file"]{
 
     display: none;
 
 }
 
-label[for=curriculo]{
+label[type="curriculo"]{
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-size: 3rem;
+    
+}
 
-    border: 2px solid black;
-    width: 180px;
-    height: 30px;
-    border-radius: 10px;
+label[type="curriculo"]:hover{
 
+    color: #facf29;
+    border: 2px solid #facf29;
+    
 
 }
+
+button[type="submit"]{
+    font-size: 3rem;
+    border-radius: 5px;
+    border: 2px solid white;
+    color: white;
+    background-color: rgba(0, 0, 0, 0 );
+    cursor: pointer;
+
+}
+
+button[type="submit"]:hover{
+    color: #33B300;
+    border: 2px solid #33B300;
+
+}
+
+button[type="reset"]{
+    font-size: 3rem;
+    border-radius: 5px;
+    border: 2px solid white;
+    color: white;
+    background-color: rgba(0, 0, 0, 0 );
+    cursor: pointer;
+
+}
+
+button[type="reset"]:hover{
+    color: red;
+    border: 2px solid red;
+
+}
+
