--- a/ProjetoAgricolaDario/estiloHome.css
+++ b/ProjetoAgricolaDario/estiloHome.css
@@ -11,21 +11,23 @@
     --bg--text--color: white;
 }
 
-.fotoLogo {
-    width: 20rem;
-    height: 20rem;
+.fotoLogo { 
+    width: 15rem;
+    height: 15rem;
 }
 
 .nav {
-    width: 21rem;
-    height: 75rem;
+    width: 20rem;
+    height: 100vh;
+    padding: 0.5%;
     background-color: var(--nav--bg--color);
     color: var(--nav--text--color);
-    display: flex;
+    display: block;
     flex-direction: column;
+    margin-right: 10%;
     
-
 }
+
 .nome {
     font-size: 5rem;
     text-align: center;
@@ -33,7 +35,11 @@
 
 ul {
    list-style-type: none;
-   font-size: 3rem;
+   display: block;
+   text-align: center;
+   margin: 0;
+   padding: 0;
+
 }
 
 ul a {
@@ -41,32 +47,49 @@ ul a {
     color: var(--nav--text--color);
     display: block;
     text-align: center;
-    margin: 5rem 0;
+    margin: 7rem 0;
+    font-size: 2rem;
+} 
+
+
+.carrossel {
+    margin: 0;
 }
 
 .container {
     display: flex;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
+
 
 .container2 {
     display: flex;
-    padding: 1rem;
-    background-color: black;
-    opacity: 0.9;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 20%;
+    margin: 5% 0 30% 0;
+   
+    
 }
 
-.container3 {
-    display: flex;
-    margin: 19rem 19rem 19rem 19rem;
-}
 
 .carrossel {
-    width: 200rem;
-    height: 200rem;
-} 
+    width: 60%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 p {
-    margin-right: 7rem;
+    margin-top: 2rem;
+    width: 60vw;
+    padding-bottom: 0;
 }
 
 body {
@@ -77,4 +100,84 @@ body {
     background-size: cover;
     color: var(--bg--text--color);
     font-size: 2rem;
+    width: 100vw;
+    height: 100%;
+    overflow: hidden;
+}
+
+@media (max-width: 450px) {
+
+    .container {
+        display: block;
+        padding: 0;
+        margin-top: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .container2 {
+        margin-top: 20%;
+    }
+
+    p {
+        font-size: 1rem; 
+    } 
+
+    .fotoLogo { 
+        width: 5rem;
+        height: 5rem;
+        margin-left: 2rem;
+        margin-top: 1rem;
+    }
+    
+    .nav {
+        width: 100%;
+        height: 13rem;
+        padding: 0.2%;
+        background-color: var(--nav--bg--color);
+        color: var(--nav--text--color);
+        display: flex;
+        
+        
+    }
+    
+    .nome {
+        font-size: 2.5rem;
+        text-align: left;
+        margin-left: 1.5rem;
+    
+    }
+
+    ul {
+        display: flex;
+    }
+    
+
+
+    ul a {
+        text-decoration: none;
+        color: var(--nav--text--color);
+        display: flex;
+        text-align: center;
+        margin: 5rem 1rem;
+        font-size: 1rem;
+        flex-direction: row;
+
+    } 
+   
+}
+
+@media (min-width: 700px) and (max-width: 1024px) {
+
+    .container2 {
+        margin-top: 40%;
+    }
+
+    ul a {
+        margin-top: 10rem;
+        margin-bottom: 10rem;
+    }
+
+    ul{
+        margin-top: 25rem;
+    }
 }
