--- a/ProjetoAgricolaDario/estiloHome.css
+++ b/ProjetoAgricolaDario/estiloHome.css
@@ -51,11 +51,6 @@ ul a {
     font-size: 2rem;
 } 
 
-
-.carrossel {
-    margin: 0;
-}
-
 .container {
     display: flex;
     padding: 0;
@@ -84,6 +79,7 @@ ul a {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 
 p {
@@ -144,6 +140,7 @@ body {
         font-size: 2.5rem;
         text-align: left;
         margin-left: 1.5rem;
+        margin-top: 1rem;
     
     }
 
