--- a/ProjetoAgricolaDario/estiloTrabalheConosco.css
+++ b/ProjetoAgricolaDario/estiloTrabalheConosco.css
@@ -11,8 +11,8 @@
 }
 
 .fotoLogo {
-    width: 20rem;
-    height: 20rem;
+    width: 100%;
+    height: 100%;
 }
 
 html{
@@ -25,7 +25,7 @@ html{
 }
 
 .marca{
-    font-size: 5rem;
+    font-size: 500%;
     text-align: center;
 }
 
@@ -39,37 +39,43 @@ ul a {
     color: var(--nav--text--color);
     display: block;
     text-align: center;
-    margin: 5rem 0;
+    margin: 20% 0;
 }
 
 .menu{
-    width: 21rem;
-    height: 75rem;
+    
     background-color: var(--nav--bg--color);
     color: var(--nav--text--color);
     display: flex;
     flex-direction: column;
     opacity: 0.9;
+    width: 100%;
+    height: fit-content;
+
     
 }
 
 .conteudo{
-    display: flex;
+    display: grid;  
+    grid-template-columns: 20% 70%;  
 }
 
 .conteiner{
+
+    color:white;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     transform: translate(-50%, -50%);
-    color:white
+    width: 50%;
+    height: 50%;
 
 }
 
 form{
     display: flex;
     flex-direction: column;
-    width: 60rem;
+    width: 70%;
     margin-left: 7rem;
     margin-bottom: 7rem;
     padding: 20px;
