--- a/ProjetoAgricolaDario/servicos.css
+++ b/ProjetoAgricolaDario/servicos.css
@@ -18,7 +18,7 @@
 
 .nav {
     width: 20rem;
-    height: 100%;
+    height: 100vh;
     padding: 0.5%;
     background-color: var(--nav--bg--color);
     color: var(--nav--text--color);
@@ -113,12 +113,11 @@ body {
     }
 
     .container2 {
-        margin-top: 15%;
+        margin-top: 5%;
     }
 
     p {
         font-size: 1rem; 
-        width: 85%;
     } 
 
     .fotoLogo { 
@@ -163,22 +162,20 @@ body {
         flex-direction: row;
 
     } 
-
-    img {
-        width: 25%;
-        height: 20%;
-    }
    
 }
 
 @media (min-width: 700px) and (max-width: 1024px) {
 
     .nav {
-        width: 100%;
+    
+        padding-bottom: 60%;
+        margin: 0;
+
     }
 
     .container2 {
-        margin-top: 5%;
+        margin-top: 20%;
     }
 
     ul a {
@@ -186,7 +183,9 @@ body {
         margin-bottom: 10rem;
     }
 
-    ul{
+    ul {
         margin-top: 25rem;
     }
+
+
 }
