--- a/ProjetoAgricolaDario/institucional.css
+++ b/ProjetoAgricolaDario/institucional.css
@@ -7,12 +7,12 @@
 :root {
     font-size: 62.5%;
     --nav--bg--color: #466428;
-    --nav--text--color: white;
-    --body--text--color: white;
+    --nav--text--color: #e0f5cc;
+    --body--text--color: #e0f5cc;
 }
 
 p {
-    margin-top: 20%;
+    margin-top: 0;
     margin-left: 10%;
     width: 70vw;
     padding-bottom: 0;
@@ -35,12 +35,13 @@ p {
     position: sticky;
 
 }
+
 .nome {
     font-size: 5rem;
     text-align: center;
 }
 
-ul {
+.navUl {
     list-style-type: none;
     display: block;
     text-align: center;
@@ -48,13 +49,18 @@ ul {
     padding: 0;
 }
 
-ul a {
+.aNav {
     text-decoration: none;
     color: var(--nav--text--color);
     display: block;
     text-align: center;
     margin: 7rem 0;
     font-size: 2rem;
+    
+}
+
+a:hover {
+    color: rgb(2, 55, 2);
 }
 
 .container {
@@ -67,12 +73,30 @@ ul a {
 
 .container2 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 20%;
     margin-right: 15%;
+    margin-top: 5%;
+}
 
+.caixa {
+    border: 1rem solid #e0f5cc;
+    border-radius: 2rem;
+    margin-left: 15%;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--nav--bg--color);
+    color: #e0f5cc
+}
+
+.ulContato {
+     font-size: 3rem;
 }
 
 body {
@@ -100,7 +124,7 @@ body {
         font-size: 1rem; 
         width: 85%;
         margin: 10%;
-        margin-top: 20%;
+        margin-top: 5%;
 
     } 
 
@@ -128,15 +152,16 @@ body {
         text-align: left;
         margin-left: 1.5rem;
         margin-top: 1rem;
+        width: 10vw;
     
     }
 
-    ul {
+    .navUl {
         display: flex;
     }
     
 
-    ul a {
+    .aNav {
         text-decoration: none;
         color: var(--nav--text--color);
         display: flex;
@@ -146,7 +171,27 @@ body {
         flex-direction: row;
 
     } 
+
+    .caixa {
+        border: 0.5rem solid #e0f5cc;
+        border-radius: 1rem;
+        margin-left: 0;
+        padding: 1%;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+        width: 50vw;
+    }
    
+    h2 {
+        font-size: 1rem;
+        width: 50vw;
+    }
+
+    .ulContato {
+        font-size: 2rem;
+   }
 }
 
 @media (min-width: 700px) and (max-width: 1024px) {
@@ -157,23 +202,50 @@ body {
 
     }
 
-    .container2 {
-        margin-top: 5%;
+    .nome {
+        width: 20vw;
     }
 
-    ul a {
+    .container2 {
+        margin-top: 5%;
+        margin: 0;
+    }
+
+    .aNav {
         margin-top: 10rem;
         margin-bottom: 10rem;
     }
 
-    ul{
+    .navUl {
         margin-top: 25rem;
     }
+    
 
     p {
         font-size: 2rem; 
-        margin: 7%;
-        margin-top: 40%;
-
+        margin: 5%;
+        margin-top: 12%;
+        margin-right: 0;
     } 
+
+    .caixa {
+        border: 0.5rem solid #e0f5cc;
+        border-radius: 1rem;
+        margin-left: 0;
+        padding: 1%;
+    }
+
+    h1 {
+        font-size: 2rem;
+        width: 50vw;
+    }
+   
+    h2 {
+        font-size: 1.5rem;
+        width: 50vw;
+    }
+
+    .ulContato {
+        font-size: 2rem;
+   }
 }
