--- a/ProjetoAgricolaDario/servicos.css
+++ b/ProjetoAgricolaDario/servicos.css
@@ -7,37 +7,42 @@
 :root {
     font-size: 62.5%;
     --nav--bg--color: #466428;
-    --nav--text--color: white;
-    --body--text--color: white;
+    --nav--text--color: #e0f5cc;
+    --body--text--color: #e0f5cc;
 }
 
-.fotoLogo {
+.fotoLogo { 
     width: 15rem;
     height: 15rem;
+    margin: 0;
 }
 
 .nav {
     width: 20rem;
-    height: 100vh;
+    height: 100%;
     padding: 0.5%;
+    padding-bottom: 15%;
     background-color: var(--nav--bg--color);
     color: var(--nav--text--color);
     display: block;
     flex-direction: column;
     margin-right: 10%;
-
+    position: sticky;
+    
 }
+
 .nome {
     font-size: 5rem;
     text-align: center;
 }
 
 ul {
-    list-style-type: none;
+   list-style-type: none;
    display: block;
    text-align: center;
    margin: 0;
    padding: 0;
+
 }
 
 ul a {
@@ -47,6 +52,10 @@ ul a {
     text-align: center;
     margin: 7rem 0;
     font-size: 2rem;
+} 
+
+a:hover {
+    color: rgb(2, 55, 2);
 }
 
 p {
