--- a/ProjetoAgricolaDario/estiloTrabalheConosco.css
+++ b/ProjetoAgricolaDario/estiloTrabalheConosco.css
@@ -7,81 +7,93 @@
 :root {
     font-size: 62.5%;
     --nav--bg--color: #466428;
-    --nav--text--color: white;
+    --nav--text--color: #e0f5cc;
 }
 
-.fotoLogo {
-    width: 100%;
-    height: 100%;
-}
-
-html{
-    min-height: 100%;
-    background-image: url(maquinas.jpg);
-    background-size: cover;
+body {
+    background-image: url("maquinas.jpg");
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    color: var(--bg--text--color);
+    font-size: 2rem;
+    width: 100vw;
+    height: 100%;
+    overflow: hidden;
     
 }
 
-.marca{
-    font-size: 500%;
+.fotoLogo { 
+    width: 15rem;
+    height: 15rem;
+}
+
+.nav {
+    width: 16.2rem;
+    height: 100%;
+    padding: 0.5%;
+    padding-bottom: 15%;
+    background-color: var(--nav--bg--color);
+    color: var(--nav--text--color);
+    display: block;
+    flex-direction: column;
+    position: sticky;
+    
+}
+
+.nome {
+    font-size: 5rem;
     text-align: center;
 }
 
-ul{
-    list-style-type: none;
-    font-size: 3rem;
- }
+ul {
+   list-style-type: none;
+   display: block;
+   text-align: center;
+   margin: 0;
+   padding: 0;
+
+}
 
 ul a {
     text-decoration: none;
     color: var(--nav--text--color);
     display: block;
     text-align: center;
-    margin: 20% 0;
+    margin: 7rem 0;
+    font-size: 2rem;
+} 
+
+a:hover {
+    color: rgb(2, 55, 2);
 }
 
-.menu{
-    
-    background-color: var(--nav--bg--color);
-    color: var(--nav--text--color);
+.conteiner {
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+.conteiner2 {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#e0f5cc;
+    margin-left: 25%;
+    height: 100vh;
+
+}
+
+form {
     display: flex;
     flex-direction: column;
-    opacity: 0.9;
-    width: 100%;
-    height: fit-content;
-
-    
-}
-
-.conteudo{
-    display: grid;  
-    grid-template-columns: 20% 70%;  
-}
-
-.conteiner{
-
-    color:white;
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    transform: translate(-50%, -50%);
-    width: 50%;
-    height: 50%;
-
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    margin-left: 7rem;
-    margin-bottom: 7rem;
-    padding: 20px;
-    border: 2px solid white;
+    width: 30vw;
+    padding: 2rem;
+    border: 2px solid #e0f5cc;
     border-radius: 15px;
-    font-size: 3rem;
+    font-size: 2rem;
     background: rgba(0, 0, 0, 0.6 );
     gap: 0.5rem;
 }
@@ -94,10 +106,11 @@ input[type="file"]{
 
 label[type="curriculo"]{
     cursor: pointer;
-    border: 2px solid white;
+    border: 2px solid #e0f5cc;
     border-radius: 5px;
     font-size: 3rem;
-    
+    margin-top: 1rem;
+    padding: 0.5rem;
 }
 
 label[type="curriculo"]:hover{
@@ -108,6 +121,11 @@ label[type="curriculo"]:hover{
 
 }
 
+button {
+    margin: 1rem 1rem 1rem 0;
+    padding: 0.5rem;
+}
+
 button[type="submit"]{
     font-size: 3rem;
     border-radius: 5px;
@@ -115,7 +133,6 @@ button[type="submit"]{
     color: white;
     background-color: rgba(0, 0, 0, 0 );
     cursor: pointer;
-
 }
 
 button[type="submit"]:hover{
@@ -138,5 +155,188 @@ button[type="reset"]:hover{
     color: red;
     border: 2px solid red;
 
+}
+
+@media (max-width: 450px) {
+
+    .fotoLogo { 
+        width: 5rem;
+        height: 5rem;
+        margin-left: 2rem;
+        margin-top: 1rem;
+    }
+    
+    .nav {
+        width: 100%;
+        height: 13rem;
+        padding: 0.2%;
+        background-color: var(--nav--bg--color);
+        color: var(--nav--text--color);
+        display: flex;
+     
+    }
+    
+    .nome {
+        font-size: 2.5rem;
+        text-align: left;
+        margin-left: 1.5rem;
+        margin-top: 1rem;
+    
+    }
+
+    ul {
+        display: flex;
+    }
+    
+
+
+    ul a {
+        text-decoration: none;
+        color: var(--nav--text--color);
+        display: flex;
+        text-align: center;
+        margin: 5rem 1rem;
+        font-size: 1.3rem;
+        flex-direction: row;
+
+    } 
+
+    form {
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        margin-left: 0;
+        margin-bottom: 7rem;
+        margin-top: 0;
+        padding: 2rem;
+        border: 2px solid white;
+        border-radius: 15px;
+        font-size: 1.6rem;
+        background: rgba(0, 0, 0, 0.6 );
+        gap: 0.5rem;
+    }
+
+   
+
+    .conteiner {
+        display: block;
+        padding: 0;
+        margin: 0;
+    }
+    
+    .conteiner2 {
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color:white;
+        margin-left: 0;
+        height: 100vh;
+    
+    }
+
+    label[type="curriculo"]{
+        cursor: pointer;
+        border: 2px solid white;
+        border-radius: 5px;
+        font-size: 1.5rem;
+        margin-top: 1rem;
+    }
+
+    button[type="submit"]{
+        font-size: 1.5rem;
+        border-radius: 5px;
+        border: 2px solid white;
+        color: white;
+        background-color: rgba(0, 0, 0, 0 );
+        cursor: pointer;
+    }
+    
+    button[type="reset"]{
+        font-size: 1.5rem;
+        border-radius: 5px;
+        border: 2px solid white;
+        color: white;
+        background-color: rgba(0, 0, 0, 0 );
+        cursor: pointer;
+    
+    }
+    
+   
+}
+
+@media (min-width: 700px) and (max-width: 1024px) {
+
+
+    .nav {
+    
+        padding-bottom: 60%;
+        margin: 0;
+
+    }
+
+    .container2 {
+        margin-top: 20%;
+    }
+
+    ul a {
+        margin-top: 10rem;
+        margin-bottom: 10rem;
+    }
+
+    ul {
+        margin-top: 25rem;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        margin-left: 12%;
+        margin-bottom: 0;
+        margin-top: 0;
+        padding: 2rem;
+        border: 2px solid white;
+        border-radius: 15px;
+        font-size: 1.6rem;
+        background: rgba(0, 0, 0, 0.6 );
+        gap: 0.5rem;
+    }
+    
+    .conteiner2 {
+    
+        margin-top: 20%;
+        margin: 0;
+    
+    }
+
+    label[type="curriculo"]{
+        cursor: pointer;
+        border: 2px solid white;
+        border-radius: 5px;
+        font-size: 1.5rem;
+        margin-top: 1rem;
+    }
+
+    button[type="submit"]{
+        font-size: 1.5rem;
+        border-radius: 5px;
+        border: 2px solid white;
+        color: white;
+        background-color: rgba(0, 0, 0, 0 );
+        cursor: pointer;
+    }
+    
+    button[type="reset"]{
+        font-size: 1.5rem;
+        border-radius: 5px;
+        border: 2px solid white;
+        color: white;
+        background-color: rgba(0, 0, 0, 0 );
+        cursor: pointer;
+    
+    }
+    
+   
 }
 
