--- a/ProjetoAgricolaDario/servicos.css
+++ b/ProjetoAgricolaDario/servicos.css
@@ -79,7 +79,8 @@ p {
     align-items: center;
     width: 100vw;
     height: 20%;
-    margin: 5% 0 30% 0;
+    margin-left: 5%;
+    margin-top: 1%;
    
     
 }
