--- a/ProjetoAgricolaDario/institucional.css
+++ b/ProjetoAgricolaDario/institucional.css
@@ -78,7 +78,7 @@ a:hover {
     align-items: center;
     width: 100vw;
     height: 20%;
-    margin-right: 0;
+    margin-left: 7%;
     margin-top: 1%;
 }
 
